examples/templating/front-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/robots.txt"
                direct_response:
                  status: 200
                  body:
                    filename: ${ROBOTS_TXT_ADDRESS}
              - match:
                  prefix: "/"
                direct_response:
                  status: 404
                  body:
                    inline_string: "Unable to route request."
          http_filters:
          - name: envoy.router
            typed_config: {}
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
